# gist

./: .gitignore  .pylintrc  README.md  pyproject.toml  pythonclean.sh  pythonsetup.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/prompts/: generate-plan.prompt.md
docs/: PRD.md  implementation_plan_phase_1.md  implementation_plan_phase_2.md
scripts/: pythonclean.sh  pythonlint.sh  pythonsetup.sh
src/gist/: __main__.py  embeddings.py  extractor.py  indexer.py  main.py  store.py  walker.py
tests/: test_cli.py  test_extractor.py  test_phase2.py  test_walker.py
