[project]
name = "gist"
version = "0.1.0"
description = "A short description of the Python package"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/serialprimate/gist"
Documentation = "https://gist.readthedocs.io/"

[project.scripts]
gist = "gist.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",
  ".*/"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gist"]
