[project]
name = "gist"
version = "0.1.0"
description = "Polyglot semantic code search using Tree-sitter and vector embeddings"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "click",
  "pathspec",
  "tree-sitter==0.20.4",
  "tree-sitter-languages",
  "sentence-transformers",
  "chromadb",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/serialprimate/gist"
Repository = "https://github.com/serialprimate/gist"
Issues = "https://github.com/serialprimate/gist/issues"

[project.scripts]
gist = "gist.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",
  ".*/"
]

[tool.hatch.build.targets.wheel]
packages = ["src/gist"]
